--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
     "prettier": "^2.5.1",
+    "sass": "^1.69.4",
     "terser": "^5.14.2",
     "vite": "^3.0.2",
     "vitest": "^0.18.1",
